# exam2bench

./: .gitignore  README.md  oab_download_urls.json  pyproject.toml
products/enam/: pipeline.py  subject_map.py
products/oab/: area_map.py  converter.py  pipeline.py
products/oab/raw/: 2010-01.txt  2010-02.txt  2011-03.txt  2011-04.txt  2011-05.txt  2012-06.txt  2012-06a.txt  2012-07.txt  2012-08.txt  2012-09.txt  2013-10.txt  2013-11.txt  2013-12.txt  2014-13.txt  2014-14.txt  2014-15.txt  2015-16.txt  2015-17.txt  2015-18.txt  2016-19.txt  2016-20.txt  2016-20a.txt  2016-21.txt  2017-22.txt  2017-23.txt  2017-24.txt  2018-25.txt
scripts/: download_enam.py  download_oab.py  oab_urls.json  scrape_oab_urls.py  update_oab_gabaritos.py
src/exam2bench/: __init__.py  cli.py  exporter.py  extractor.py  main.py  merger.py  models.py  pairing.py  pdf_processor.py  ui.py
tests/: test_exporter.py  test_merger.py  test_oab_converter.py  test_pairing.py  test_pdf_processor.py
