[project]
name = "exam2bench"
version = "0.1.0"
description = "Extrator de questões de provas de concursos públicos para avaliação de LLMs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[google-genai]>=1.2.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.7",
]

[project.scripts]
exam2bench = "exam2bench.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/exam2bench", "products"]

[dependency-groups]
dev = [
    "datasets>=4.8.3",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
